# Proyecto-1-Breakout-ClientServer

./: README.md
Client/: CMakeLists.txt  KeyListener.cpp  KeyListener.h  SocketClient.cpp  SocketClient.h  main.cpp
Client/block_factory/: BlockFactory.cpp  BlockFactory.h
Client/game/: Ball.cpp  Ball.h  Bar.cpp  Bar.h  Block.cpp  Block.h  Game.cpp  Game.h
Server/: CMakeLists.txt  GameData.cpp  GameData.h  SocketServer.cpp  SocketServer.h  main.cpp
Server/block_factory/: BlockFactory.cpp  BlockFactory.h
Server/game/: Ball.cpp  Bar.h  Block.cpp  Block.h  Game.cpp  Game.h
